[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-index-llms-asi"
version = "0.1.0"
description = "ASI integration for LlamaIndex"
authors = [
    {name = "Fetch.ai Inc.", email = "info@fetch.ai"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "llama-index-llms-openai-like>=0.1.0",
    "llama-index-core>=0.10.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]
examples = [
    "llama-index-embeddings-huggingface",
    "llama-index-embeddings-openai",
]

[project.urls]
"Homepage" = "https://github.com/fetch-ai/llama-index-llms-asi"
"Bug Tracker" = "https://github.com/fetch-ai/llama-index-llms-asi/issues"
"Documentation" = "https://docs.fetch.ai"

[tool.setuptools.packages.find]
include = ["llama_index_llms_asi*"]

[tool.llamahub]
package-type = "llm"
model-name = "asi"
description = "ASI integration for LlamaIndex"
organization = "Fetch.ai"
repository = "https://github.com/fetch-ai/llama-index-llms-asi"
release-date = "2025-03-26"
categories = ["llm"]
requires-api-key = true